// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostPublishPanel should render the post-publish panel if the post is published 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  font-size: 11px;
  font-weight: 600;
  line-height: 1.4;
  text-transform: uppercase;
  display: block;
  margin-bottom: calc(4px * 2);
  padding: 0;
}

<div>
  <div
    class="editor-post-publish-panel"
    tabindex="-1"
  >
    <div
      class="editor-post-publish-panel__header"
    >
      <button
        aria-label="Close panel"
        class="components-button is-compact has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="editor-post-publish-panel__content"
    >
      <div
        class="post-publish-panel__postpublish"
      >
        <div
          class="components-panel__body post-publish-panel__postpublish-header is-opened"
        >
          <a
            class="components-external-link"
            href="https://wordpress.local/sample-page/"
            target="_blank"
          >
            <span
              class="components-external-link__contents"
            >
              (no title)
            </span>
            <span
              aria-label="(opens in a new tab)"
              class="components-external-link__icon wp-exclude-emoji"
            >
              ↗
            </span>
          </a>
           
          is now live.
        </div>
        <div
          class="components-panel__body is-opened"
        >
          <p
            class="post-publish-panel__postpublish-subheader"
          >
            <strong>
              What’s next?
            </strong>
          </p>
          <div
            class="post-publish-panel__postpublish-post-address-container"
          >
            <div
              class="components-base-control post-publish-panel__postpublish-post-address emotion-0 emotion-1"
            >
              <div
                class="components-base-control__field emotion-2 emotion-3"
              >
                <label
                  class="components-base-control__label emotion-4 emotion-5"
                  for="inspector-text-control-0"
                >
                  post address
                </label>
                <input
                  class="components-text-control__input"
                  id="inspector-text-control-0"
                  readonly=""
                  type="text"
                  value="https://wordpress.local/sample-page/"
                />
              </div>
            </div>
            <div
              class="post-publish-panel__postpublish-post-address__copy-button-wrap"
            >
              <button
                class="components-button is-next-40px-default-size is-secondary"
                type="button"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="post-publish-panel__postpublish-buttons"
          >
            <a
              class="components-button is-next-40px-default-size is-primary has-icon has-icon-right"
              href="https://wordpress.local/sample-page/"
              target="_blank"
            >
              <span
                class="style-visually-hidden"
                data-visually-hidden=""
              >
                (opens in a new tab)
              </span>
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.5 4.5h-7V6h4.44l-5.97 5.97 1.06 1.06L18 7.06v4.44h1.5v-7Zm-13 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-3H17v3a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h3V5.5h-3Z"
                />
              </svg>
            </a>
            <a
              class="components-button is-next-40px-default-size is-secondary"
              href="post-new.php?"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__footer"
    >
      <div
        class="components-base-control components-checkbox-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: flex-start; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: 0; --wp-components-flex-justify: start;"
          >
            <span
              class="components-checkbox-control__input-container"
            >
              <input
                class="components-checkbox-control__input"
                id="inspector-checkbox-control-3"
                type="checkbox"
                value="1"
              />
            </span>
            <label
              class="components-checkbox-control__label"
              for="inspector-checkbox-control-3"
            >
              Always show pre-publish checks.
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostPublishPanel should render the post-publish panel if the post is scheduled 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  font-size: 11px;
  font-weight: 600;
  line-height: 1.4;
  text-transform: uppercase;
  display: block;
  margin-bottom: calc(4px * 2);
  padding: 0;
}

<div>
  <div
    class="editor-post-publish-panel"
    tabindex="-1"
  >
    <div
      class="editor-post-publish-panel__header"
    >
      <button
        aria-label="Close panel"
        class="components-button is-compact has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
          />
        </svg>
      </button>
    </div>
    <div
      class="editor-post-publish-panel__content"
    >
      <div
        class="post-publish-panel__postpublish"
      >
        <div
          class="components-panel__body post-publish-panel__postpublish-header is-opened"
        >
          <a
            class="components-external-link"
            href="https://wordpress.local/sample-page/"
            target="_blank"
          >
            <span
              class="components-external-link__contents"
            >
              (no title)
            </span>
            <span
              aria-label="(opens in a new tab)"
              class="components-external-link__icon wp-exclude-emoji"
            >
              ↗
            </span>
          </a>
           
          is now scheduled. It will go live on
           
          Immediately
          .
        </div>
        <div
          class="components-panel__body is-opened"
        >
          <p
            class="post-publish-panel__postpublish-subheader"
          >
            <strong>
              What’s next?
            </strong>
          </p>
          <div
            class="post-publish-panel__postpublish-post-address-container"
          >
            <div
              class="components-base-control post-publish-panel__postpublish-post-address emotion-0 emotion-1"
            >
              <div
                class="components-base-control__field emotion-2 emotion-3"
              >
                <label
                  class="components-base-control__label emotion-4 emotion-5"
                  for="inspector-text-control-1"
                >
                  post address
                </label>
                <input
                  class="components-text-control__input"
                  id="inspector-text-control-1"
                  readonly=""
                  type="text"
                  value="https://wordpress.local/sample-page/"
                />
              </div>
            </div>
            <div
              class="post-publish-panel__postpublish-post-address__copy-button-wrap"
            >
              <button
                class="components-button is-next-40px-default-size is-secondary"
                type="button"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="post-publish-panel__postpublish-buttons"
          >
            <a
              class="components-button is-next-40px-default-size is-primary"
              href="post-new.php?"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__footer"
    >
      <div
        class="components-base-control components-checkbox-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: flex-start; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: 0; --wp-components-flex-justify: start;"
          >
            <span
              class="components-checkbox-control__input-container"
            >
              <input
                class="components-checkbox-control__input"
                id="inspector-checkbox-control-4"
                type="checkbox"
                value="1"
              />
            </span>
            <label
              class="components-checkbox-control__label"
              for="inspector-checkbox-control-4"
            >
              Always show pre-publish checks.
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostPublishPanel should render the pre-publish panel if post status is scheduled but date is before now 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="editor-post-publish-panel"
    tabindex="-1"
  >
    <div
      class="editor-post-publish-panel__header"
    >
      <div
        class="editor-post-publish-panel__header-cancel-button"
      >
        <button
          class="components-button is-secondary is-compact"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="editor-post-publish-panel__header-publish-button"
      >
        <button
          aria-disabled="true"
          class="components-button editor-post-publish-button editor-post-publish-button__button is-primary is-compact"
          type="button"
        >
          Submit for Review
        </button>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__content"
    >
      <div
        class="editor-post-publish-panel__prepublish"
      >
        <div>
          <strong>
            Are you ready to submit for review?
          </strong>
        </div>
        <p>
          Your work will be reviewed and then approved.
        </p>
        <div
          class="components-site-card"
        >
          <svg
            aria-hidden="true"
            class="components-site-icon"
            fill="currentColor"
            focusable="false"
            height="36px"
            viewBox="0 0 24 24"
            width="36px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 22 12 C 22 6.49 17.51 2 12 2 C 6.48 2 2 6.49 2 12 C 2 17.52 6.48 22 12 22 C 17.51 22 22 17.52 22 12 M 9.78 17.37 L 6.37 8.22 C 6.92 8.2 7.54 8.14 7.54 8.14 C 8.04 8.08 7.98 7.01 7.48 7.03 C 7.48 7.03 6.03 7.14 5.11 7.14 C 4.93 7.14 4.74 7.14 4.53 7.13 C 6.12 4.69 8.87 3.11 12 3.11 C 14.33 3.11 16.45 3.98 18.05 5.45 C 17.37 5.34 16.4 5.84 16.4 7.03 C 16.4 7.77 16.85 8.39 17.3 9.13 C 17.65 9.74 17.85 10.49 17.85 11.59 C 17.85 13.08 16.45 16.59 16.45 16.59 L 13.42 8.22 C 13.96 8.2 14.24 8.05 14.24 8.05 C 14.74 8 14.68 6.8 14.18 6.83 C 14.18 6.83 12.74 6.95 11.8 6.95 C 10.93 6.95 9.47 6.83 9.47 6.83 C 8.97 6.8 8.91 8.03 9.41 8.05 L 10.33 8.13 L 11.59 11.54 L 9.78 17.37 M 19.41 12 C 19.65 11.36 20.15 10.13 19.84 7.75 C 20.54 9.04 20.89 10.46 20.89 12 C 20.89 15.29 19.16 18.24 16.49 19.78 C 17.46 17.19 18.43 14.58 19.41 12 M 8.1 20.09 C 5.12 18.65 3.11 15.53 3.11 12 C 3.11 10.7 3.34 9.52 3.83 8.41 C 5.25 12.3 6.67 16.2 8.1 20.09 M 12.13 13.46 L 14.71 20.44 C 13.85 20.73 12.95 20.89 12 20.89 C 11.21 20.89 10.43 20.78 9.71 20.56 C 10.52 18.18 11.33 15.82 12.13 13.46 L 12.13 13.46"
            />
          </svg>
          <div
            class="components-site-info"
          >
            <span
              class="components-site-name"
            >
              (Untitled)
            </span>
            <span
              class="components-site-home"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__footer"
    >
      <div
        class="components-base-control components-checkbox-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: flex-start; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: 0; --wp-components-flex-justify: start;"
          >
            <span
              class="components-checkbox-control__input-container"
            >
              <input
                class="components-checkbox-control__input"
                id="inspector-checkbox-control-1"
                type="checkbox"
                value="1"
              />
            </span>
            <label
              class="components-checkbox-control__label"
              for="inspector-checkbox-control-1"
            >
              Always show pre-publish checks.
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostPublishPanel should render the pre-publish panel if the post is not saving, published or scheduled 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="editor-post-publish-panel"
    tabindex="-1"
  >
    <div
      class="editor-post-publish-panel__header"
    >
      <div
        class="editor-post-publish-panel__header-cancel-button"
      >
        <button
          class="components-button is-secondary is-compact"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="editor-post-publish-panel__header-publish-button"
      >
        <button
          aria-disabled="true"
          class="components-button editor-post-publish-button editor-post-publish-button__button is-primary is-compact"
          type="button"
        >
          Submit for Review
        </button>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__content"
    >
      <div
        class="editor-post-publish-panel__prepublish"
      >
        <div>
          <strong>
            Are you ready to submit for review?
          </strong>
        </div>
        <p>
          Your work will be reviewed and then approved.
        </p>
        <div
          class="components-site-card"
        >
          <svg
            aria-hidden="true"
            class="components-site-icon"
            fill="currentColor"
            focusable="false"
            height="36px"
            viewBox="0 0 24 24"
            width="36px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M 22 12 C 22 6.49 17.51 2 12 2 C 6.48 2 2 6.49 2 12 C 2 17.52 6.48 22 12 22 C 17.51 22 22 17.52 22 12 M 9.78 17.37 L 6.37 8.22 C 6.92 8.2 7.54 8.14 7.54 8.14 C 8.04 8.08 7.98 7.01 7.48 7.03 C 7.48 7.03 6.03 7.14 5.11 7.14 C 4.93 7.14 4.74 7.14 4.53 7.13 C 6.12 4.69 8.87 3.11 12 3.11 C 14.33 3.11 16.45 3.98 18.05 5.45 C 17.37 5.34 16.4 5.84 16.4 7.03 C 16.4 7.77 16.85 8.39 17.3 9.13 C 17.65 9.74 17.85 10.49 17.85 11.59 C 17.85 13.08 16.45 16.59 16.45 16.59 L 13.42 8.22 C 13.96 8.2 14.24 8.05 14.24 8.05 C 14.74 8 14.68 6.8 14.18 6.83 C 14.18 6.83 12.74 6.95 11.8 6.95 C 10.93 6.95 9.47 6.83 9.47 6.83 C 8.97 6.8 8.91 8.03 9.41 8.05 L 10.33 8.13 L 11.59 11.54 L 9.78 17.37 M 19.41 12 C 19.65 11.36 20.15 10.13 19.84 7.75 C 20.54 9.04 20.89 10.46 20.89 12 C 20.89 15.29 19.16 18.24 16.49 19.78 C 17.46 17.19 18.43 14.58 19.41 12 M 8.1 20.09 C 5.12 18.65 3.11 15.53 3.11 12 C 3.11 10.7 3.34 9.52 3.83 8.41 C 5.25 12.3 6.67 16.2 8.1 20.09 M 12.13 13.46 L 14.71 20.44 C 13.85 20.73 12.95 20.89 12 20.89 C 11.21 20.89 10.43 20.78 9.71 20.56 C 10.52 18.18 11.33 15.82 12.13 13.46 L 12.13 13.46"
            />
          </svg>
          <div
            class="components-site-info"
          >
            <span
              class="components-site-name"
            >
              (Untitled)
            </span>
            <span
              class="components-site-home"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__footer"
    >
      <div
        class="components-base-control components-checkbox-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: flex-start; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: 0; --wp-components-flex-justify: start;"
          >
            <span
              class="components-checkbox-control__input-container"
            >
              <input
                class="components-checkbox-control__input"
                id="inspector-checkbox-control-0"
                type="checkbox"
                value="1"
              />
            </span>
            <label
              class="components-checkbox-control__label"
              for="inspector-checkbox-control-0"
            >
              Always show pre-publish checks.
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostPublishPanel should render the spinner if the post is being saved 1`] = `
.emotion-0 {
  font-family: -apple-system,system-ui,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

<div>
  <div
    class="editor-post-publish-panel"
    tabindex="-1"
  >
    <div
      class="editor-post-publish-panel__header"
    >
      <div
        class="editor-post-publish-panel__header-cancel-button"
      >
        <button
          class="components-button is-secondary is-compact"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="editor-post-publish-panel__header-publish-button"
      >
        <button
          aria-disabled="true"
          class="components-button editor-post-publish-button editor-post-publish-button__button is-primary is-compact is-busy"
          type="button"
        >
          Submit for Review
        </button>
      </div>
    </div>
    <div
      class="editor-post-publish-panel__content"
    >
      <svg
        class="components-spinner style-spinner"
        focusable="false"
        height="16"
        role="presentation"
        viewBox="0 0 100 100"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="style-track"
          cx="50"
          cy="50"
          r="50"
          vector-effect="non-scaling-stroke"
        />
        <path
          class="style-indicator"
          d="m 50 0 a 50 50 0 0 1 50 50"
          vector-effect="non-scaling-stroke"
        />
      </svg>
    </div>
    <div
      class="editor-post-publish-panel__footer"
    >
      <div
        class="components-base-control components-checkbox-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="style-flex style-items-row style-expanded-row components-flex components-h-stack"
            data-wp-c16t="true"
            data-wp-component="HStack"
            style="--wp-components-flex-align: flex-start; --wp-components-flex-direction: row; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: 0; --wp-components-flex-justify: start;"
          >
            <span
              class="components-checkbox-control__input-container"
            >
              <input
                class="components-checkbox-control__input"
                id="inspector-checkbox-control-2"
                type="checkbox"
                value="1"
              />
            </span>
            <label
              class="components-checkbox-control__label"
              for="inspector-checkbox-control-2"
            >
              Always show pre-publish checks.
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
